--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,13 +10,13 @@
 
 <div class="col-md-4">
 <h3><%= @user.username %></h3>
-<p>Age </p>
-<p>Gender: </p>
+<p>Age <%= @user.age %></p>
+<p>Gender: <%= @user.gender %></p>
 </div>
 
 <div class="col-md-4">
 <h3>Who Am I</h3>
-<small>Bio</small>
+<small><%= @user.bio %></small>
 </div>
 
 </div>
