--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,6 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
       <%= link_to "Stukbook", root_path, class: "navbar-brand" %>
     </div>
 
@@ -20,7 +19,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Timeline</a></li>
-        <li><a href="#">People</a></li>
+        <li><%= link_to "People", users_path %></li>
         <% if current_user %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= gravatar_tag current_user.email, size: 20 %><%= current_user.username %><span class="caret"></span></a>
