Added friendship status detection

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <div class="caption">
 <h1><%= user.username %></h3>
-<p>Friendship Actions</p>
+<p><%= action_buttons(user) %></p>
 </div>
 </div>
 </div>
